--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <h4>Pregunta numero 1</h4>
                 <form>
                         <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="customRadio" name="example" value="customEx">
-                                <label class="custom-control-label" for="customRadio">Custom radio 1</label>
+                                <input type="radio" class="custom-control-input" id="p1Op1" name="pregunta1" value="customEx">
+                                <label class="custom-control-label" for="p1Op1">Custom radio 1</label>
                               </div>
                               <div class="custom-control custom-radio custom-control-inline">
-                                <input type="radio" class="custom-control-input" id="customRadio2" name="example" value="customEx">
-                                <label class="custom-control-label" for="customRadio2">Custom radio 2</label>
+                                <input type="radio" class="custom-control-input" id="p1Op2" name="pregunta1" value="customEx">
+                                <label class="custom-control-label" for="p1Op2">Custom radio 2</label>
                               </div> 
                       </form>  
             </div>
@@ -33,12 +33,12 @@
                     <h4>Pregunta numero 2</h4>
                     <form>
                             <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="customRadio" name="example" value="customEx">
-                                    <label class="custom-control-label" for="customRadio">Custom radio 1</label>
+                                    <input type="radio" class="custom-control-input" id="p2Op1" name="pregunta2" value="customEx">
+                                    <label class="custom-control-label" for="p2Op1">Custom radio 1</label>
                                   </div>
                                   <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="customRadio2" name="example" value="customEx">
-                                    <label class="custom-control-label" for="customRadio2">Custom radio 2</label>
+                                    <input type="radio" class="custom-control-input" id="p2Op2" name="pregunta2" value="customEx">
+                                    <label class="custom-control-label" for="p2Op2">Custom radio 2</label>
                                   </div> 
                           </form>  
                 </div>
