--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="title">
         <button type="button" class="btn btn-dark">Ir al final</button>
-        <h1 id="repaso-title"> - asd de examenes -</h1>
+        <h1 id="repaso-title"> - Repaso de examenes -</h1>
     </div>
     <div class="container">
         <div class="row justify-content-xl-center">
